Configure the Machine
