# src/torch_web/workflows/workflow_api.py
@@ -1,48 +1,26 @@
-import functools
-import inspect
+from apiflask import APIBlueprint
 
-from apiflask import APIBlueprint, Schema
-from apiflask.fields import Integer, String, List, Nested, Dict, DateTime
+from torch_web.workflows.workflows import TorchTasksResponse, torch_task_registry
+from workflows.tasks import check_catalog_number, check_duplicate, check_orientation, generate_derivatives, upload
+from torch_web.collections import collections
 
 workflow_bp = APIBlueprint("workflows", __name__, url_prefix="/workflows")
-torch_task_registry = []
 
-
-class TorchTask(Schema):
-    func_name = String()
-    name = String()
-    description = String(nullable=True)
-    parameters = Dict(String(), String())
-
-
-class TorchTasksResponse(Schema):
-    all_tasks = List(Nested(TorchTask))
-    collection_tasks = List(Nested(TorchTask))
-
-    
-def torch_task(name, description=None):
-    def decorate(func):
-        global torch_task_registry
-        spec = inspect.signature(func)
-        parameters = { k: str(v.default) if v.default is not inspect.Parameter.empty else None for k, v in spec.parameters.items() }
-        torch_task_registry.append({ 'name': name, 'description': description, 'func_name': func.__name__, 'parameters': parameters })
-
-        @functools.wraps(func)
-        def wrapper(*args, **kwargs):
-            result = func(*args, **kwargs)
-            return result
-
-        return wrapper
-    return decorate
 
 @workflow_bp.get("/")
 @workflow_bp.output(TorchTasksResponse)
 @workflow_bp.doc(operation_id='GetAllTasks')
 def workflows_getall():
-    from workflows.tasks import check_catalog_number
-    global torch_task_registry
-    return { 'all_tasks': torch_task_registry }
+    return { 'tasks': torch_task_registry }
 
+
+@workflow_bp.post("/<int:collectionid>")
+@workflow_bp.input(TorchTasksResponse)
+@workflow_bp.output({}, status_code=200)
+@workflow_bp.doc(operation_id='UpdateWorkflow')
+def workflow_save(collectionid: int, data: TorchTasksResponse):
+    collections.update_workflow(collectionid, data['tasks']);
+    return ''
 
 def workflows_execute():
     func_list = ["a", "b"]
